--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,315 +1,458 @@
-.container {
+// .container {
+//   position: relative;
+//   width: 100%;
+//   margin-top: 2rem;
+//   min-height: 100vh;
+//   z-index: 1000;
+//   padding: 2rem;
+//   background-color: transparent;
+//   overflow: hidden;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   background: url("../../assets/contact.jpg");
+// }
+
+// .form {
+//   width: 100%;
+//   max-width: 820px;
+//   background-color: #fff;
+//   border-radius: 10px;
+//   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+//   z-index: 10;
+//   overflow: hidden;
+//   display: grid;
+//   grid-template-columns: repeat(2, 1fr);
+//   align-items: center;
+// }
+
+// .contact-form {
+//   background-color: $primary;
+//   position: relative;
+// }
+
+// .circle {
+//   border-radius: 50%;
+//   background: linear-gradient(135deg, transparent 20%, $primary);
+//   position: absolute;
+// }
+
+// .circle.one {
+//   width: 130px;
+//   height: 130px;
+//   top: 130px;
+//   right: -40px;
+// }
+
+// .circle.two {
+//   width: 80px;
+//   height: 80px;
+//   top: 10px;
+//   right: 30px;
+// }
+
+// .contact-form:before {
+//   content: "";
+//   position: absolute;
+//   width: 26px;
+//   height: 26px;
+//   background-color: rgba(#1abc9c, 9.4);
+//   transform: rotate(45deg);
+//   top: 50px;
+//   left: -13px;
+// }
+
+// form {
+//   padding: 2.3rem 2.2rem;
+//   z-index: 10;
+//   overflow: hidden;
+//   position: relative;
+// }
+
+// .title {
+//   color: #fff;
+//   font-weight: 500;
+//   font-size: 1.5rem;
+//   line-height: 1;
+//   margin-bottom: 0.7rem;
+// }
+
+// .input-container {
+//   position: relative;
+//   margin: 1rem 0;
+// }
+
+// .input {
+//   width: 100%;
+//   outline: none;
+//   border: 2px solid #fafafa;
+//   background: none;
+//   padding: 0.6rem 1.2rem;
+//   color: #fff;
+//   font-weight: 500;
+//   font-size: 0.95rem;
+//   letter-spacing: 0.5px;
+//   border-radius: 5px;
+//   transition: 0.3s;
+//   &::placeholder {
+//     color: white;
+//   }
+// }
+
+// textarea.input {
+//   padding: 0.8rem 1.2rem;
+//   min-height: 150px;
+//   border-radius: 5px;
+//   resize: none;
+//   overflow-y: auto;
+// }
+
+// .btn {
+//   padding: 0.6rem 1.3rem;
+//   background-color: #fff;
+//   border: 2px solid #fafafa;
+//   font-size: 0.95rem;
+//   color: #1abc9c;
+//   line-height: 1;
+//   border-radius: 25px;
+//   outline: none;
+//   cursor: pointer;
+//   transition: 0.3s;
+//   margin: 0;
+// }
+
+// .btn:hover {
+//   background-color: transparent;
+//   color: #fff;
+// }
+
+// .contact-info {
+//   padding: 2.3rem 2.2rem;
+//   position: relative;
+// }
+
+// .contact-info .title {
+//   color: #1abc9c;
+// }
+
+// .text {
+//   color: #333;
+//   margin: 1.5rem 0 2rem 0;
+// }
+
+// .information {
+//   display: flex;
+//   color: #555;
+//   margin: 0.7rem 0;
+//   align-items: center;
+//   font-size: 0.95rem;
+// }
+
+// .icon {
+//   width: 28px;
+//   margin-right: 0.7rem;
+// }
+
+// .social-media {
+//   padding: 2rem 0 0 0;
+// }
+
+// .social-media p {
+//   color: #333;
+// }
+
+// .social-icons {
+//   display: flex;
+//   margin-top: 0.5rem;
+// }
+
+// .social-icons a {
+//   width: 35px;
+//   height: 35px;
+//   border-radius: 5px;
+//   background: linear-gradient(45deg, #1abc9c, #149279);
+//   color: #fff;
+//   text-align: center;
+//   line-height: 35px;
+//   margin-right: 0.5rem;
+//   transition: 0.3s;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// .social-icons a:hover {
+//   transform: scale(1.05);
+// }
+
+// .contact-info:before {
+//   content: "";
+//   position: absolute;
+//   width: 110px;
+//   height: 100px;
+//   border: 22px solid #1abc9c;
+//   border-radius: 50%;
+//   bottom: -77px;
+//   right: 50px;
+//   opacity: 0.3;
+// }
+
+// .big-circle {
+//   position: absolute;
+//   width: 500px;
+//   height: 500px;
+//   border-radius: 50%;
+//   background: linear-gradient(to bottom, #1cd4af, #159b80);
+//   bottom: 50%;
+//   right: 50%;
+//   transform: translate(-40%, 38%);
+// }
+
+// .big-circle:after {
+//   content: "";
+//   position: absolute;
+//   width: 360px;
+//   height: 360px;
+//   background-color: #fafafa;
+//   border-radius: 50%;
+//   top: calc(50% - 180px);
+//   left: calc(50% - 180px);
+// }
+
+// .square {
+//   position: absolute;
+//   height: 400px;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(181%, 11%);
+//   opacity: 0.2;
+// }
+
+// @media (max-width: 850px) {
+//   .form {
+//     grid-template-columns: 1fr;
+//   }
+
+//   .contact-info:before {
+//     bottom: initial;
+//     top: -75px;
+//     right: 65px;
+//     transform: scale(0.95);
+//   }
+
+//   .contact-form:before {
+//     top: -13px;
+//     left: initial;
+//     right: 70px;
+//   }
+
+//   .square {
+//     transform: translate(140%, 43%);
+//     height: 350px;
+//   }
+
+//   .big-circle {
+//     bottom: 75%;
+//     transform: scale(0.9) translate(-40%, 30%);
+//     right: 50%;
+//   }
+
+//   .text {
+//     margin: 1rem 0 1.5rem 0;
+//   }
+
+//   .social-media {
+//     padding: 1.5rem 0 0 0;
+//   }
+// }
+
+// @media (max-width: 480px) {
+//   .container {
+//     padding: 1.5rem;
+//   }
+
+//   .contact-info:before {
+//     display: none;
+//   }
+
+//   .square,
+//   .big-circle {
+//     display: none;
+//   }
+
+//   form,
+//   .contact-info {
+//     padding: 1.7rem 1.6rem;
+//   }
+
+//   .text,
+//   .information,
+//   .social-media p {
+//     font-size: 0.8rem;
+//   }
+
+//   .title {
+//     font-size: 1.15rem;
+//   }
+
+//   .social-icons a {
+//     width: 30px;
+//     height: 30px;
+//     line-height: 30px;
+//   }
+
+//   .icon {
+//     width: 23px;
+//   }
+
+//   .input {
+//     padding: 0.45rem 1.2rem;
+//   }
+
+//   .btn {
+//     padding: 0.45rem 1.2rem;
+//   }
+// }
+.contactme {
+  width: auto;
+  height: calc(100vh - 8rem);
+  // background-color: rebeccapurple;
+  // background-color: black;
+  // background: url(../../assets/9.svg);
+  margin-top: 8rem;
   position: relative;
-  width: 100%;
-  margin-top: 2rem;
-  min-height: 100vh;
-  z-index: 1000;
-  padding: 2rem;
-  background-color: transparent;
-  overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: center;
-  background: url("../../assets/contact.jpg");
-}
-
-.form {
-  width: 100%;
-  max-width: 820px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
-  z-index: 10;
-  overflow: hidden;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-}
-
-.contact-form {
-  background-color: $primary;
-  position: relative;
-}
-
-.circle {
-  border-radius: 50%;
-  background: linear-gradient(135deg, transparent 20%, $primary);
-  position: absolute;
-}
-
-.circle.one {
-  width: 130px;
-  height: 130px;
-  top: 130px;
-  right: -40px;
-}
-
-.circle.two {
-  width: 80px;
-  height: 80px;
-  top: 10px;
-  right: 30px;
-}
-
-.contact-form:before {
-  content: "";
-  position: absolute;
-  width: 26px;
-  height: 26px;
-  background-color: rgba(#1abc9c, 9.4);
-  transform: rotate(45deg);
-  top: 50px;
-  left: -13px;
-}
-
-form {
-  padding: 2.3rem 2.2rem;
-  z-index: 10;
-  overflow: hidden;
-  position: relative;
-}
-
-.title {
-  color: #fff;
-  font-weight: 500;
-  font-size: 1.5rem;
-  line-height: 1;
-  margin-bottom: 0.7rem;
-}
-
-.input-container {
-  position: relative;
-  margin: 1rem 0;
-}
-
-.input {
-  width: 100%;
-  outline: none;
-  border: 2px solid #fafafa;
-  background: none;
-  padding: 0.6rem 1.2rem;
-  color: #fff;
-  font-weight: 500;
-  font-size: 0.95rem;
-  letter-spacing: 0.5px;
-  border-radius: 5px;
-  transition: 0.3s;
-  &::placeholder {
-    color: white;
+  justify-content: flex-end;
+  &__image {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    & img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
   }
-}
-
-textarea.input {
-  padding: 0.8rem 1.2rem;
-  min-height: 150px;
-  border-radius: 5px;
-  resize: none;
-  overflow-y: auto;
-}
-
-.btn {
-  padding: 0.6rem 1.3rem;
-  background-color: #fff;
-  border: 2px solid #fafafa;
-  font-size: 0.95rem;
-  color: #1abc9c;
-  line-height: 1;
-  border-radius: 25px;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-  margin: 0;
-}
-
-.btn:hover {
-  background-color: transparent;
-  color: #fff;
-}
-
-.contact-info {
-  padding: 2.3rem 2.2rem;
-  position: relative;
-}
-
-.contact-info .title {
-  color: #1abc9c;
-}
-
-.text {
-  color: #333;
-  margin: 1.5rem 0 2rem 0;
-}
-
-.information {
-  display: flex;
-  color: #555;
-  margin: 0.7rem 0;
-  align-items: center;
-  font-size: 0.95rem;
-}
-
-.icon {
-  width: 28px;
-  margin-right: 0.7rem;
-}
-
-.social-media {
-  padding: 2rem 0 0 0;
-}
-
-.social-media p {
-  color: #333;
-}
-
-.social-icons {
-  display: flex;
-  margin-top: 0.5rem;
-}
-
-.social-icons a {
-  width: 35px;
-  height: 35px;
-  border-radius: 5px;
-  background: linear-gradient(45deg, #1abc9c, #149279);
-  color: #fff;
-  text-align: center;
-  line-height: 35px;
-  margin-right: 0.5rem;
-  transition: 0.3s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.social-icons a:hover {
-  transform: scale(1.05);
-}
-
-.contact-info:before {
-  content: "";
-  position: absolute;
-  width: 110px;
-  height: 100px;
-  border: 22px solid #1abc9c;
-  border-radius: 50%;
-  bottom: -77px;
-  right: 50px;
-  opacity: 0.3;
-}
-
-.big-circle {
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  border-radius: 50%;
-  background: linear-gradient(to bottom, #1cd4af, #159b80);
-  bottom: 50%;
-  right: 50%;
-  transform: translate(-40%, 38%);
-}
-
-.big-circle:after {
-  content: "";
-  position: absolute;
-  width: 360px;
-  height: 360px;
-  background-color: #fafafa;
-  border-radius: 50%;
-  top: calc(50% - 180px);
-  left: calc(50% - 180px);
-}
-
-.square {
-  position: absolute;
-  height: 400px;
-  top: 50%;
-  left: 50%;
-  transform: translate(181%, 11%);
-  opacity: 0.2;
-}
-
-@media (max-width: 850px) {
-  .form {
-    grid-template-columns: 1fr;
+  &__form {
+    width: 50vw;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background-color: white;
+    .form {
+      width: 400px;
+      padding: 4rem 2rem 0 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      background-color: white;
+      &__heading {
+        font-size: 2rem;
+        position: relative;
+        &::after {
+          position: absolute;
+          content: "⟶";
+          top: 40%;
+          right: 3rem;
+          transform: translateY(-50%);
+        }
+      }
+      &__name,
+      &__email,
+      &__number,
+      &__message {
+        label {
+          color: rgb(56, 56, 56);
+        }
+        input {
+          margin-top: 5px;
+          border: 1px solid #b0b0b0;
+          width: 100%;
+          padding: 0.8rem 0.5rem;
+        }
+      }
+      button {
+        width: 100%;
+        background-color: rgb(34, 33, 33);
+        color: white;
+        text-align: center;
+        padding: 1rem 2rem;
+        font-size: 1rem;
+      }
+    }
   }
+  &__social-container {
+    $timing: 265ms;
+    $iconColor: #00b5f5;
+    $accent: #002a8f;
+    $bluefade: #0043e0;
+    $gradient: #00b5f5;
 
-  .contact-info:before {
-    bottom: initial;
-    top: -75px;
-    right: 65px;
-    transform: scale(0.95);
-  }
+    @mixin transformScale($size: 1) {
+      transform: scale($size);
+      -ms-transform: scale($size);
+      -webkit-transform: scale($size);
+    }
+    .social-container {
+      width: 400px;
+      margin: 40vh auto;
+      text-align: center;
+    }
 
-  .contact-form:before {
-    top: -13px;
-    left: initial;
-    right: 70px;
-  }
+    .social-icons {
+      padding: 0;
+      list-style: none;
+      margin: 1em;
 
-  .square {
-    transform: translate(140%, 43%);
-    height: 350px;
-  }
+      li {
+        display: inline-block;
+        margin: 0.15em;
+        position: relative;
+        font-size: 1em;
+      }
 
-  .big-circle {
-    bottom: 75%;
-    transform: scale(0.9) translate(-40%, 30%);
-    right: 50%;
-  }
+      i {
+        color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: all $timing ease-out;
+      }
 
-  .text {
-    margin: 1rem 0 1.5rem 0;
-  }
+      a {
+        display: inline-block;
 
-  .social-media {
-    padding: 1.5rem 0 0 0;
-  }
-}
+        &:before {
+          @include transformScale();
+          content: " ";
 
-@media (max-width: 480px) {
-  .container {
-    padding: 1.5rem;
-  }
+          width: 50px;
+          height: 50px;
+          border-radius: 100%;
+          display: block;
+          background: linear-gradient(45deg, $iconColor, $accent);
+          transition: all $timing ease-out;
+        }
 
-  .contact-info:before {
-    display: none;
-  }
+        &:hover:before {
+          transform: scale(0);
+          transition: all $timing ease-in;
+        }
 
-  .square,
-  .big-circle {
-    display: none;
-  }
-
-  form,
-  .contact-info {
-    padding: 1.7rem 1.6rem;
-  }
-
-  .text,
-  .information,
-  .social-media p {
-    font-size: 0.8rem;
-  }
-
-  .title {
-    font-size: 1.15rem;
-  }
-
-  .social-icons a {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-  }
-
-  .icon {
-    width: 23px;
-  }
-
-  .input {
-    padding: 0.45rem 1.2rem;
-  }
-
-  .btn {
-    padding: 0.45rem 1.2rem;
+        &:hover i {
+          @include transformScale(1.2);
+          color: $iconColor;
+          background: -webkit-linear-gradient(45deg, $iconColor, $accent);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          transition: all $timing ease-in;
+        }
+      }
+    }
   }
 }
