--- a/src/styles/pages/_memory.scss
+++ b/src/styles/pages/_memory.scss
@@ -43,7 +43,8 @@
     display: flex;
     padding: 1rem;
     height: 85vh;
-    width: 80vw;
+    width: 100%;
+    overflow-x: hidden;
     @media (max-width: 37.5rem) {
       height: 50vh;
     }
